FIX ALIGNMENT NAVBAR
.navbarContainer width was set to 110% (for unknown reason), I changed this to 100% so the navbar elements properly align.

--- a/template.css
+++ b/template.css
@@ -20,7 +20,7 @@ body {
 .navbarContainer {
     position: fixed;
     top: 0;
-    width: 110%;
+    width: 100%;
     background-color: #132D48;
     display: flex;
     color: #FFFFFF;
